# pmms-heat-diffusion

./: .gitignore  ChangeLog  DAS5_cheatsheet.md  Makefile  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  data.mk
Latex_template/: bib.bib  main.tex
acc/: Makefile.am  Makefile.in  compute.c  configure  configure.ac  example.c  matmul.c
assignment_1/: README.md
assignment_1/heat_seq/: Makefile
assignment_1/heat_simd/: Makefile
assignment_1/seq_1.1/: Makefile
assignment_1/simd_1.4/: Makefile
assignment_2/: README.md
assignment_2/mergesort_2.3/: Makefile
assignment_2/omp_2.1/: Makefile  compute.h  input.h  output.h
assignment_2/vecsort/: vecsort.c
assignment_2/vecsort/parallel/: vecsort.c
assignment_2/vecsort/sequential/: vecsort.c
assignment_2/vecsort_2.5/: Makefile
assignment_3/: README.md
assignment_3/histo/histo_avoiding_mutual_ex/: histo.c
assignment_3/histo/with_mutual_ex/histo_mutex/: histo.c
assignment_3/histo/with_mutual_ex/histo_semaphores/: histo.c
assignment_3/histo_3.4/: Makefile
assignment_3/pipesort/: pipesort.c
assignment_3/pipesort_3.3/: Makefile
assignment_3/pth_3.1/: Makefile  fail.h
assignment_4/cuda_original/: Makefile.cuda  README.txt  aclocal.m4  compute.cu  config.h  config.status  cuda_compute.cu  hist_kernel.cu  histogram.c  histogram.cu  ttt
assignment_4/cuda_original/.deps/: compute.Po  fail.Po  histogram.Tpo  img.Po  input.Po  main.Po  merge.Po  output.Po
assignment_4/cuda_original/autom4te.cache/: output.0  traces.0
assignment_4/histogram/: histogram.cu
assignment_4/matmul/: matmul.c
heat_dissipation_reference_output/: img.0000000042.pgm
omp/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  merge.c
pth/: Makefile.am  Makefile.in  aclocal.m4  barrier.c  config.h.in  configure  configure.ac
seq/: Makefile.am  Makefile.in  compute.c  config.h.in  configure  configure.ac
src/: common.m4  input.c  libcommon.mk  output.c
